Fixed z-index issues... that was short lived

--- a/src/App/components/Header/Header.css
+++ b/src/App/components/Header/Header.css
@@ -9,7 +9,7 @@
   top: 0;
   left: 0;
   width: 80vw;
-  z-index: 9001; }
+  z-index: 1; }
   #header nav {
     padding: 10px;
     width: 100%;
