--- a/src/App/components/ProductInquiry/InquiryWizard/InquiryWizard.css
+++ b/src/App/components/ProductInquiry/InquiryWizard/InquiryWizard.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Ubuntu:400,700);
 .inquiry-wizard {
   padding: 10px;
-  z-index: 2;
+  z-index: 10;
   position: fixed;
   top: 10vh;
   right: 10vw;
